实现学生画像计算与版本接口